# torch2chip

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt  t2c.yml  tensor_test.py  test.py
bert/: mrpc.py  mrpc_t2c.py  sst2.py
config/: llama2-7b-wikitext.yaml  llama2-7b.yaml  llama3.1-8b-gsm8k.yaml  llama3.1-8b-mmlu.yaml  llama3.1-8b-wikitext.yaml  llama3.1-8b.yaml  llama3.1-mmlu.yaml  llama3.2-3b-gsm8k.yaml  llama3.2-3b-mmlu.yaml  llama3.2-3b-wikitext.yaml  llama3.2-3b.yaml  resnet18-imagenet1k.yaml  resnet50-imagenet1k.yaml  resnet50.yaml  retnet.yaml  retnet3B.yaml  swin-imagenet1k.yaml  vit-imagenet1k.yaml  vit.yaml
csrc/: README.md  build_cutlass.sh  environment.sh  pyproject.toml  setup.py
csrc/kernel/: bcmm.cu  bindings.cpp  bmm.cu  bmw.cu  qbmw.cu  scaler.cu
csrc/kernel/include/: bcmm.h  bmm.h  bmw.h  common.h  qbmw.h
csrc/t2c_gemm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
csrc/triton/gemm/: gemm.py
imagenet/: ptq.py  reload.py  t2c.py  vit.py
llm/: gsm8k.py  mmlu.py  retnet.py  wikitext.py
prune/: resnet.py
script/bert/: mrpc.sh  mrpc_t2c.sh  sst2.sh  sst2_t2c.sh
script/imagenet/: pretrain.sh  prune.sh  ptq.sh  resnet50_t2c_lsq_adaround.sh  resnet50_t2c_lsq_minmax_channel.sh  resnet50_t2c_qdrop_minmax_channel.sh  resnet50_t2c_reload_qdrop_minmax_channel.sh  swin-t2c-smoothquant.sh  swin-vit-t2c-minmax.sh  t2c.sh  t2c_cnn.sh  vit-ptq-adaround-lsq.sh  vit-ptq-adaround-qdrop.sh  vit-ptq-minmax-lsq.sh  vit-ptq-minmax.sh  vit-ptq-smoothquant.sh  vit-t2c-adaround-lsq.sh  vit-t2c-minmax-lsq.sh  (+7 more)
vision/: resnet.py  swin.py  vit.py
(+89 files in other folders)
